# aca_allign_internship

./: .clang-format  .gitignore  CMakeLists.txt  READEME.md
Algorithms/: CMakeLists.txt  DynamicProgramming.hpp  HashTable.h  MatrixChain.cpp  MatrixChain.hpp  SweepLine.h  main.cpp
Collection/: CMakeLists.txt  Collection.h  main.cpp
Polar_Cartesian_Systems/: CMakeLists.txt  Cartesian.cpp  Polar.cpp  cartesian.h  main.cpp  polar.h
TemplateMetaprogramming/: CMakeLists.txt  Variadic.cpp  main.cpp
Templates/: CMakeLists.txt  main.cpp
concurency/: BusyWait.hpp  CMakeLists.txt  CheckSleep.cpp  ExpirationCache.cpp  ExpirationCache.hpp  Primes.hpp  main.cpp  thread_pull.cpp  thread_pull.h
constexpr/: CMakeLIsts.txt
desing_patterns/: CMakeLists.txt  main.cpp
desing_patterns/Adapter/: ArmenianStudent.h  ArmenianStudentAdapter.h  ArmenianStudentAdapterInhereted.h  HighSchoolStudent.h  School.h  Student.h
desing_patterns/Decorator/: Compressor.h  DataWriter.h  Decorator.h  FileWriter.h  NetworkWriter.h  TransformerDecorator.h
desing_patterns/observer/: CMakeLists.txt  Display.h  Heater.h  Observer.h  Subject.h  TemperatureSubject.h  main.cpp
enum/: CMakeLists.txt  enums.cpp
inheritance/: Animal.hpp  CMakeLists.txt  main.cpp  templateMethod.cpp
lib_project/executable/: CMakelists.txt  main.cpp
lib_project/lib/: CMakelists.txt  Mat.cpp  Mat.h
repetition/: CMakeLists.txt  main.cpp
utility/: Measurer.hpp
wrong_ptr/: CMakeLists.txt  main.cpp  wrong_ptr.h
