cmake_minimum_required(VERSION 3.10)
project(ACA)
set(CMAKE_CXX_STANDARD 20)

# if(MSVC)
# add_compile_options( /W4 /WX)
# else()
# add_compile_options(  -Wall -Wextra -Wpedantic -Werror)
# endif()
add_subdirectory(Algorithms)
add_subdirectory(Collection)

# add_subdirectory(constexpr)
add_subdirectory(inheritance)
add_subdirectory(Polar_Cartesian_Systems)
add_subdirectory(repetition)
add_subdirectory(Templates)
add_subdirectory(wrong_ptr)
add_subdirectory(TemplateMetaprogramming)
add_subdirectory(concurency)
add_subdirectory(desing_patterns)
add_subdirectory(enum)
